# Myne

./: .gitignore  .gitmodules  CMakeLists.txt  Game  Game.Linux.x86_64  README.md  TODO.md  clang-tool.h  clang_tool.c  clang_tool.hpp  click.hpp  collobjs.hpp  ctest.cpp  editor_requirements.txt  editorstuff.hpp  editortests.hpp  imgui.ini  input.hpp  libSDL3_image.so.0.3.0  main.cpp  of.json  perf.data  save.json  save.sve  text.txt
.autogen/: domain.cpp  domain.hpp  include.hpp
.cpp/: SDL3.cpp  blendobj.cpp  collobj.cpp  display.cpp  drawobj.cpp  drawtarget.cpp  factory.cpp  game.cpp  hull.cpp  joint.cpp  loader.cpp  main.cpp  object.cpp  pos.cpp  process.cpp  ptfm.cpp  rad.cpp  ref.cpp  saver.cpp  tfm.cpp  tube.cpp  window.cpp
.h/: collobj.h  collobj.hpp  display.hpp  drawobj.h  drawobj.hpp  game.h  game.hpp  object.h  object.hpp  pos.h  pos.hpp  process.h  process.hpp  ptfm.h  rad.hpp  tfm.h  tfm.hpp  window.h  window.hpp
.hpp/: SDL3.h  b2.h  blend.h  blendobj.hpp  collobj.hpp  display.hpp  drawobj.hpp  drawtarget.hpp  err.hpp  factory.hpp  game.hpp  hash.hpp  hull.hpp  joint.hpp  load_save_requirements.hpp  loader.hpp  object.hpp  pos.hpp  process.hpp  rad.hpp  ranges.hpp  ref.hpp  saver.hpp  serial.hpp  tfm.hpp  tube.hpp
.privatehpp/: _jointobj.hpp
ast/: ast.hpp  ast_custom.hpp  ast_load.hpp  ast_search.hpp  ast_stuff.hpp  print.hpp  ts_tool.c  ts_tool.h
